게임스테이트 파일 추가

--- a/The-Last-Fast-Food-Secret-World_/The-Last-Fast-Food-Secret-World_.vcxproj
+++ b/The-Last-Fast-Food-Secret-World_/The-Last-Fast-Food-Secret-World_.vcxproj
@@ -128,8 +128,10 @@
     <ClInclude Include="CardGacha.h" />
     <ClInclude Include="CardTableManager.h" />
     <ClInclude Include="DeckBuilding.h" />
+    <ClInclude Include="GameState.h" />
     <ClInclude Include="ImageLoad.h" />
     <ClInclude Include="ImageManager.h" />
+    <ClInclude Include="InputGame.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="macroNum.h" />
     <ClInclude Include="MainGame.h" />
@@ -142,8 +144,10 @@
     <ClCompile Include="CardGacha.cpp" />
     <ClCompile Include="CardTableManager.cpp" />
     <ClCompile Include="DeckBuilding.cpp" />
+    <ClCompile Include="GameState.cpp" />
     <ClCompile Include="ImageLoad.cpp" />
     <ClCompile Include="ImageManager.cpp" />
+    <ClCompile Include="InputGame.cpp" />
     <ClCompile Include="MainGame.cpp" />
     <ClCompile Include="RenderManager.cpp" />
     <ClCompile Include="Shop.cpp" />
