--- a/The-Last-Fast-Food-Secret-World_/The-Last-Fast-Food-Secret-World_.vcxproj.filters
+++ b/The-Last-Fast-Food-Secret-World_/The-Last-Fast-Food-Secret-World_.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClInclude Include="Singleton.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="GameState.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="InputGame.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Card.cpp">
@@ -88,6 +94,12 @@
     </ClCompile>
     <ClCompile Include="WM_Main.cpp">
       <Filter>메인</Filter>
+    </ClCompile>
+    <ClCompile Include="GameState.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="InputGame.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
