gemini api 사용 구현
아직 완성은 아님. 보스 턴 랙 걸림 주의.

--- a/The-Last-Fast-Food-Secret-World/The-Last-Fast-Food-Secret-World.vcxproj
+++ b/The-Last-Fast-Food-Secret-World/The-Last-Fast-Food-Secret-World.vcxproj
@@ -23,6 +23,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="Boass.cpp" />
+    <ClCompile Include="BossAI.cpp" />
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="CardGacha.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
@@ -62,6 +63,7 @@
     </ClInclude>
     <ClInclude Include="BattleTypes.h" />
     <ClInclude Include="Boss.h" />
+    <ClInclude Include="BossAI.h" />
     <ClInclude Include="Card.h" />
     <ClInclude Include="CardGacha.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
@@ -148,6 +150,9 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Label="Vcpkg">
+    <VcpkgEnabled>false</VcpkgEnabled>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -180,12 +185,15 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;CURL_STATICLIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\The_Last_Fast_Food\The-Last-Fast-Food-Secret-World\The-Last-Fast-Food-Secret-World\External\json\include;C:\The_Last_Fast_Food\The-Last-Fast-Food-Secret-World\The-Last-Fast-Food-Secret-World\External\curl\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>libcurl.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\The_Last_Fast_Food\The-Last-Fast-Food-Secret-World\The-Last-Fast-Food-Secret-World\External\curl\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
