--- a/The-Last-Fast-Food-Secret-World/The-Last-Fast-Food-Secret-World.vcxproj.filters
+++ b/The-Last-Fast-Food-Secret-World/The-Last-Fast-Food-Secret-World.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="WM_Main.cpp">
       <Filter>메인</Filter>
     </ClCompile>
+    <ClCompile Include="BossAI.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SupportCard.h">
@@ -144,6 +147,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="AtkCard.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="BossAI.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
